Fix overflow

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -722,6 +722,7 @@
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
+		overflow: hidden;
 	}
 
 		#main .avatar {
